--- a/style.css
+++ b/style.css
@@ -66,9 +66,7 @@ input{
     color: #999;
 }
 
-
-
-/* .btn-field{
+.btn-field{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -89,4 +87,4 @@ input{
 .btn-field button:hover{
     background: #999;
     color: #eaeaea;
-} */
+}
