--- a/style.css
+++ b/style.css
@@ -71,8 +71,9 @@ input{
     display: flex;
     justify-content: center;
     background: #000000;
-    border-radius: 20px;
     color: #fff;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
 .btn-field button{
