--- a/style.css
+++ b/style.css
@@ -67,11 +67,11 @@ input{
 }
 
 .btn-field{
-    width: 75%;
+    width: 50%;
     display: flex;
     justify-content: center;
     background: #000000;
-    color: #fff;
+    color: #ffffff;
     border-radius: 20px;
     cursor: pointer;
 }
