--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ input{
 }
 
 .btn-field{
-    width: 100%;
+    width: 150px;
     display: flex;
     justify-content: center;
     background: #000000;
