--- a/style.css
+++ b/style.css
@@ -67,8 +67,7 @@ input{
 
 .btn-field{
     width: 150px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 85px;
     background: #000000;
     border-radius: 50px;
 }
