--- a/style.css
+++ b/style.css
@@ -66,8 +66,9 @@ input{
 }
 
 .btn-field{
-    width: 150px;
-    margin-left: 85px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     background: #000000;
     border-radius: 50px;
 }
