--- a/blogStyle.css
+++ b/blogStyle.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background: url(beach.png);
+    background: url(beachbg.png);
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
