--- a/blogStyle.css
+++ b/blogStyle.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background: url(beachbg.png);
+    background: url(islandbeach.png);
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -27,7 +27,7 @@ body{
 }
 
 .select{
-    background: #e9e9e9;
+    background: #fff;
     color: #2a2f3b;
     display: flex;
     justify-content: center;
@@ -40,7 +40,7 @@ body{
 }
 
 .select:hover{
-    background: #fff;
+    background: #e9e9e9;
 }
 
 .caret{
